# mcp-email-server

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/mcp_mail/: accounts.py  api.py  app.py  auth.py  config.py  main.py  schemas.py  server.py  tools.py  validators.py
src/mcp_mail/services/: email_service.py  imap_client.py  smtp_client.py
tests/: conftest.py  test_accounts.py  test_api.py  test_auth.py  test_config.py  test_email_service.py  test_validators.py
